fixed color error

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ a {
     font-weight: 700;
     font-size: 36px;
     line-height: 111%;
-    color: 2E2F42;
+    color: #2E2F42;
 }
 .team-item-title {
     font-weight: 500;
