--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ a {
     font-weight: 700;
     font-size: 18px;
     color: #4D5AE5;
-    line-height: 117%;
+    line-height: 1.16667;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
@@ -24,7 +24,7 @@ a {
 .nav-link {
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     color: #2E2F42;
     letter-spacing: 0.02em;
 }
@@ -40,7 +40,7 @@ a {
 .address-link {
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -56,7 +56,7 @@ background-color: #2E2F42;
 .solutions-title {
     font-weight: 700;
     font-size: 56px;
-    line-height: 107%;
+    line-height: 1.07143;
     text-align: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
@@ -65,7 +65,7 @@ background-color: #2E2F42;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     color: #FFFFFF;
     background-color: #4D5AE5;
@@ -81,14 +81,14 @@ background-color: #2E2F42;
 .benefits-item {
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
 .benefits-text {
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
 }
 .team-section {
@@ -97,7 +97,7 @@ background-color: #2E2F42;
 .team-title {
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11111;
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
@@ -109,7 +109,7 @@ background-color: #2E2F42;
 .team-item-title {
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
     
@@ -117,13 +117,13 @@ background-color: #2E2F42;
 .team-item-text {
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em
 }
 .portfolio-title {
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11111;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
@@ -135,14 +135,14 @@ background-color: #2E2F42;
 .portfolio-img-title {
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
 .portfolio-text {
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em
 }
 .footer-page {
@@ -154,7 +154,7 @@ background-color: #2E2F42;
 .footer-text {
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
 }
